--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,29 +1,54 @@
 <style>
-  .main {
+  main {
     display: flex;
-    align-items: center;
-    justify-content: center;
     width: 100%;
     height: 100%;
   }
 
-  .timer-widget {
-    text-align: center;
+  .layout {
+    display: flex;
+    height: 100%;   /* take full viewport height */
+    width: 100%;    /* take full viewport width */
+  }
+
+  .side {
+    width: 400px;
+    background: #f5f5f5;
+    padding: 1rem;
+  }
+
+  .content {
+    flex-grow: 1;        /* take remaining width */
+    background: #ffffff;
+    padding: 1rem;
+  }
+
+  /* Center in both containers */
+  .side, .content {
+    display: flex;
+    align-items: center;   /* horizontal center */
+    justify-content: center; /* vertical center */
+    text-align: center;    /* if you want text centered as well */
+  }
+
+  .history-section {
+    width: 100%;
+    height: 100%;
   }
 </style>
 
-<main class="main">
-  <div class="content">
-    <div class="timer-widget">
-      <app-timer id="buttontimer" (timeDone)="history.addTime($event)" #buttontimer></app-timer>
-      <app-button-controls [timer]="buttontimer"></app-button-controls>
-
-      <app-timer id="kbtimer" (timeDone)="history.addTime($event)" #kbtimer></app-timer>
-      <p>(use <b>Space</b> for this timer)</p>
-      <app-keyboard-controls [timer]="kbtimer"></app-keyboard-controls>
-
-      <br/>
-      <app-time-history #history></app-time-history>
+<main>
+  <div class="layout">
+    <div class="side">
+      <div class="history-section">
+        <app-time-history #history></app-time-history>
+      </div>
+    </div>
+    <div class="content">
+      <div class="timer-widget">
+        <app-timer id="kbtimer" (timeDone)="history.addTime($event)" #kbtimer></app-timer>
+        <app-keyboard-controls [timer]="kbtimer"></app-keyboard-controls>
+      </div>
     </div>
   </div>
 </main>
