--- a/src/app/app.html
+++ b/src/app/app.html
@@ -19,7 +19,6 @@
 
   .content {
     flex-grow: 1;        /* take remaining width */
-    background: #ffffff;
     padding: 1rem;
   }
 
@@ -29,6 +28,7 @@
     align-items: center;   /* horizontal center */
     justify-content: center; /* vertical center */
     text-align: center;    /* if you want text centered as well */
+    flex-direction: column;
   }
 
   .history-section {
@@ -45,6 +45,9 @@
       </div>
     </div>
     <div class="content">
+      <div class="daily-widget">
+        <app-daily-scramble></app-daily-scramble>
+      </div>
       <div class="timer-widget">
         <app-timer id="kbtimer" (timeDone)="history.addTime($event)" #kbtimer></app-timer>
         <app-keyboard-controls [timer]="kbtimer"></app-keyboard-controls>
