--- a/src/custom-theme.scss
+++ b/src/custom-theme.scss
@@ -21,7 +21,7 @@ body {
   // Default the application to a light color theme. This can be changed to
   // `dark` to enable the dark color theme, or to `light dark` to defer to the
   // user's system settings.
-  color-scheme: light;
+  color-scheme: light dark;
 
   // Set a default background, font and text colors for the application using
   // Angular Material's system-level CSS variables. Learn more about these
@@ -32,4 +32,13 @@ body {
 
   // Reset the user agent margin.
   margin: 0;
+}
+
+
+body.light-mode {
+  color-scheme: light
+}
+
+body.dark-mode {
+  color-scheme: dark
 }
