--- a/src/app/daily-page/daily-page.html
+++ b/src/app/daily-page/daily-page.html
@@ -1,2 +1,30 @@
-<app-daily-scramble></app-daily-scramble>
-<app-timer></app-timer>
+<app-daily-scramble [hidden]="!isReady()"></app-daily-scramble>
+<app-timer #timer (timeDone)="done($event)"></app-timer>
+<app-keyboard-controls [timer]="timer" behavior="stop"></app-keyboard-controls>
+<button matFab extended (click)="ready()" [disabled]="isReady()">
+    <mat-icon>check</mat-icon>
+    Ready
+</button>
+<div class="leaderboard">
+    <h2>Daily Leaderboard</h2>
+
+    <table mat-table [dataSource]="leaderboard()">
+        <ng-container matColumnDef="rank">
+            <th mat-header-cell *matHeaderCellDef> Rank </th>
+            <td mat-cell *matCellDef="let i = index;"> {{ i + 1 }} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="username">
+            <th mat-header-cell *matHeaderCellDef></th>
+            <td mat-cell *matCellDef="let element;"> {{ element.username }} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="time">
+            <th mat-header-cell *matHeaderCellDef> Time </th>
+            <td mat-cell *matCellDef="let element;"> {{ element.time | timer }} </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
+</div>
